# pbd

./: .gitignore  README.md  pyproject.toml
notebooks/: rect_edges.ipynb  tshirt_avatar.ipynb
src/: cloth_avatar_collision.py  cloth_cylinder_collision.py  cloth_pieces.py  cloth_sphere_collision.py  cloth_torso_collision.py  mesh_utils.py  pbd.py  rectangle_stitch.py  sphere_collision.py
tests/: test_collision_detection.py
